# kotlin-leveldb-minecraft

./: .gitmodules  README.md
.github/workflows/: build-native.yml  build-project.yml  publish-project.yml
cpp/: CMakePresets.json
cpp/leveldb-minecraft-jni/: CMakeLists.txt  leveldb_jni.cpp
kotlin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/src/androidMain/kotlin/io/github/cuixiang0130/minecraft/leveldb/: DB.android.kt
kotlin/src/commonMain/kotlin/io/github/cuixiang0130/minecraft/leveldb/: CompressionType.kt  DB.kt  DBException.kt  DBIterator.kt  Options.kt  ReadOptions.kt  Snapshot.kt  WriteBatch.kt
kotlin/src/commonTest/kotlin/io/github/cuixiang0130/minecraft/leveldb/: DBTest.kt
kotlin/src/jniMain/kotlin/io/github/cuixiang0130/minecraft/leveldb/: DB.jni.kt  DBIterator.jni.kt  Snapshot.jni.kt  WriteBatch.jni.kt
kotlin/src/jvmMain/kotlin/io/github/cuixiang0130/minecraft/leveldb/: DB.jvm.kt
kotlin/src/nativeInterop/cinterop/: leveldb.def
kotlin/src/nativeMain/kotlin/io/github/cuixiang0130/minecraft/leveldb/: DB.native.kt  DBIterator.native.kt  NativeUtils.kt  Snapshot.native.kt  WriteBatch.native.kt
